--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ function formatTime(sec) {
 
                 <div class="bg-[#0F172A] p-4 rounded-lg text-center">
                     <div class="icon-wrap">
-                        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg">
+                        <img class="logo" src="https://symbols.getvecta.com/stencil_28/61_sql-database-generic.90b41636a8.svg">
                     </div>
                     <p class="mt-2">SQL</p>
                 </div>
